fix: parquet support and schemas

--- a/notebooks/create_marker_dataset.ipynb
+++ b/notebooks/create_marker_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "afd82f64-6a10-4aeb-af51-69046db4ac88",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fc5b3db3-aacd-4c99-9587-18c2d99422ed",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b1fa7696-c82c-4a43-8bca-497b783825c7",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "2057b180-bca4-45ac-a55b-dd0dc6d88dcb",
    "metadata": {},
    "outputs": [
@@ -79,13 +79,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "gt_blocks <class 'str'>\n",
       "img <class 'PIL.PngImagePlugin.PngImageFile'>\n",
       "page_bbox <class 'list'>\n",
       "classification <class 'str'>\n",
       "language <class 'str'>\n",
       "pdf <class 'bytes'>\n",
-      "uuid <class 'int'>\n",
-      "json_output_true <class 'list'>\n"
+      "uuid <class 'int'>\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "6b6c6a30-2aec-4151-be8d-d9930ed16bab",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "d49f08cd-668d-4e14-8e12-9adaa688d1c4",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "1afdeb5f-c65e-4dd0-b33d-34f35d2dd140",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "34c76c88-da7e-4841-973b-585d1240a912",
    "metadata": {},
    "outputs": [],
@@ -437,42 +437,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "58e2c106-b966-4e50-b5dd-d9ab66160a03",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06297f0b3f3a4af6b1f3dc1847eed55e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/22 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "775976150"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Try to save the dataset as a parquet file (its around 700 Mo)\n",
-    "ds[\"train\"].to_parquet(\"dataset_test.parquet\", compression=\"gzip\") "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "50d90dd6-5d08-4a6a-8af0-73e830d31e04",
    "metadata": {},
@@ -486,14 +450,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "20339bef-fc6f-43ac-a710-991540a0ba92",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b54442001bb84dd0881f243ff439ba09",
+       "model_id": "b1bf2b1ca9234ee495980cf1fcb2b3dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -511,14 +475,18 @@
     "def create_json_output_true(row):\n",
     "    blocks = json.loads(row[\"gt_blocks\"])\n",
     "    v = []\n",
+    "    texts = []\n",
     "    for block in blocks:\n",
+    "        text = pandoc(block[\"html\"]).strip()\n",
     "        v.append({\n",
     "            'bbox': block[\"bbox\"], \n",
     "            'polygon': block[\"polygon\"], \n",
     "            'type': block[\"block_type\"],\n",
-    "            'text': pandoc(block[\"html\"]).strip()\n",
+    "            'text': text,\n",
     "        })\n",
-    "    return {\"json_output_true\": v}\n",
+    "        texts.append(text)\n",
+    "    markdown = \"\\n\\n\".join(texts)\n",
+    "    return {\"json_output_true\": v, \"markdown_true\": markdown}\n",
     "\n",
     "ds[\"train\"] = ds[\"train\"].map(create_json_output_true)\n",
     "ds[\"train\"] = ds[\"train\"].remove_columns([\"gt_blocks\"])"
@@ -526,7 +494,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
+   "id": "58e2c106-b966-4e50-b5dd-d9ab66160a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c30acf7251c429e8bffff2b955700eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/22 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "780069347"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Try to save the dataset as a parquet file (its around 700 Mo)\n",
+    "ds[\"train\"].to_parquet(\"dataset_test.parquet\", compression=\"gzip\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "35608ed8-a672-49d3-bba9-5425795289d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num rows 2138\n",
+      "column names ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyarrow.parquet as pq\n",
+    "\n",
+    "pf = pq.ParquetFile(\"dataset_test.parquet\")\n",
+    "num_rows = pf.metadata.num_rows\n",
+    "column_names = pf.schema_arrow.names\n",
+    "\n",
+    "print(\"num rows\", num_rows)\n",
+    "print(\"column names\", column_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "3362dba8-0cb3-4678-95b2-190d5305cd88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>img</th>\n",
+       "      <th>page_bbox</th>\n",
+       "      <th>classification</th>\n",
+       "      <th>language</th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>json_output_true</th>\n",
+       "      <th>markdown_true</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...</td>\n",
+       "      <td>[0.0, 0.0, 794.0, 1134.0]</td>\n",
+       "      <td>Scientific paper</td>\n",
+       "      <td>English</td>\n",
+       "      <td>b'%PDF-1.7\\r\\n%\\xa1\\xb3\\xc5\\xd7\\r\\n1 0 obj\\r\\n...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'bbox': [44.234375, 77.2880859375, 288.97851...</td>\n",
+       "      <td>substudy of precursors of depression, where ha...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 img  \\\n",
+       "0  {'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...   \n",
+       "\n",
+       "                   page_bbox    classification language  \\\n",
+       "0  [0.0, 0.0, 794.0, 1134.0]  Scientific paper  English   \n",
+       "\n",
+       "                                                 pdf  uuid  \\\n",
+       "0  b'%PDF-1.7\\r\\n%\\xa1\\xb3\\xc5\\xd7\\r\\n1 0 obj\\r\\n...     0   \n",
+       "\n",
+       "                                    json_output_true  \\\n",
+       "0  [{'bbox': [44.234375, 77.2880859375, 288.97851...   \n",
+       "\n",
+       "                                       markdown_true  \n",
+       "0  substudy of precursors of depression, where ha...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PNG\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>img</th>\n",
+       "      <th>page_bbox</th>\n",
+       "      <th>classification</th>\n",
+       "      <th>language</th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>json_output_true</th>\n",
+       "      <th>markdown_true</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...</td>\n",
+       "      <td>[0.0, 0.0, 794.0, 1123.0]</td>\n",
+       "      <td>Book page</td>\n",
+       "      <td>English</td>\n",
+       "      <td>b'%PDF-1.7\\r\\n%\\xa1\\xb3\\xc5\\xd7\\r\\n1 0 obj\\r\\n...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'bbox': [36.170654296875, 31.760009765625, 5...</td>\n",
+       "      <td>devotional confraternities associated with par...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 img  \\\n",
+       "0  {'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...   \n",
+       "\n",
+       "                   page_bbox classification language  \\\n",
+       "0  [0.0, 0.0, 794.0, 1123.0]      Book page  English   \n",
+       "\n",
+       "                                                 pdf  uuid  \\\n",
+       "0  b'%PDF-1.7\\r\\n%\\xa1\\xb3\\xc5\\xd7\\r\\n1 0 obj\\r\\n...     1   \n",
+       "\n",
+       "                                    json_output_true  \\\n",
+       "0  [{'bbox': [36.170654296875, 31.760009765625, 5...   \n",
+       "\n",
+       "                                       markdown_true  \n",
+       "0  devotional confraternities associated with par...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PNG\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "for batch in pf.iter_batches(batch_size=1):\n",
+    "    df = batch.to_pandas()\n",
+    "    display(df.head())\n",
+    "    # Open the image using Pillow\n",
+    "    image = Image.open(io.BytesIO(df[\"img\"].iloc[0][\"bytes\"]))\n",
+    "    print(image.format)\n",
+    "    i += 1\n",
+    "    if i >= 2:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "96570f92-3a66-4639-919b-0aee6f4a45e1",
    "metadata": {},
    "outputs": [
@@ -535,15 +733,16 @@
       "text/plain": [
        "{'name': 'OCR_marker_benchmark',\n",
        " 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker',\n",
-       " 'default_metric': 'ocr_json_v1',\n",
-       " 'id': 13,\n",
-       " 'created_at': '2025-04-27T22:02:37.370003',\n",
-       " 'has_query': False,\n",
+       " 'default_metric': 'ocr_v1',\n",
+       " 'id': 15,\n",
+       " 'created_at': '2025-05-02T14:08:18.952579',\n",
        " 'size': 0,\n",
-       " 'columns': []}"
+       " 'columns': [],\n",
+       " 'parquet_size': 0,\n",
+       " 'parquet_columns': []}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +750,7 @@
    "source": [
     "# Create the dataset\n",
     "dataset = {\"name\": \"OCR_marker_benchmark\", \"readme\": \"Marker benchmark. See https://github.com/VikParuchuri/marker\"\n",
-    "           , \"default_metric\" : \"ocr_json_v1\"\n",
+    "           , \"default_metric\" : \"ocr_v1\"\n",
     "           , \"df\": \"{}\"}\n",
     "\n",
     "response = requests.post(f'{EG1_API_URL}/dataset', json=dataset, headers=eg1_headers)\n",
@@ -561,14 +760,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "7af51e32-5260-415e-a2fb-54ee2c87388f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe9a11b587d2431cac761e69c884dc7c",
+       "model_id": "ebd9015d9e4043d5b8dd272aff3902ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -584,7 +783,7 @@
      "output_type": "stream",
      "text": [
       "Upload successful!\n",
-      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_json_v1', 'id': 13, 'created_at': '2025-04-27T22:02:37.370003', 'has_query': False, 'size': 0, 'columns': []}\n"
+      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'id': 15, 'created_at': '2025-05-02T14:08:18.952579', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['bytes', 'path', 'element', 'classification', 'language', 'pdf', 'uuid', 'element', 'element', 'text', 'type', 'markdown_true']}\n"
      ]
     }
    ],
