fix(schema): rename prompt_system to system_prompt

--- a/notebooks/RAG-adhoc.ipynb
+++ b/notebooks/RAG-adhoc.ipynb
@@ -266,7 +266,7 @@
     "        {\n",
     "            \"aliased_name\": models[i].split(\"/\")[-1] + \"-adhoc-rag\",\n",
     "            \"name\": models[i],\n",
-    "            \"prompt_system\": system_prompt,\n",
+    "            \"system_prompt\": system_prompt,\n",
     "            \"sampling_params\": sampling_params,\n",
     "            \"output\": outputs,\n",
     "        }\n",
