--- a/notebooks/run_set_ragmetrics_demo.ipynb
+++ b/notebooks/run_set_ragmetrics_demo.ipynb
@@ -470,7 +470,7 @@
        "  'columns': ['query', 'output_true', 'top_valid', 'operateur', 'thematique']},\n",
        " 'model': {'name': 'AgentPublic/llama3-instruct-8b',\n",
        "  'base_url': 'https://franceservices.etalab.gouv.fr/api/v1',\n",
-       "  'prompt_system': None,\n",
+       "  'system_prompt': None,\n",
        "  'sampling_params': {'temperature': 0.2},\n",
        "  'extra_params': {'rag': {'mode': 'rag', 'limit': 7}},\n",
        "  'id': 150}}"
