--- a/notebooks/run_toolings.ipynb
+++ b/notebooks/run_toolings.ipynb
@@ -57,11 +57,11 @@
     "# --\n",
     "expset_name = \"mfs_tooling_v8\"\n",
     "expset_readme = \"Evaluating tooling capabilities.  \\nembedding model: bge-multilingual-gemma2  \\ncollections: chunks-v13-04-25, limit=10\"\n",
-    "prompt_system = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques et citoyens de manière précise, concrète et concise.\"\n",
+    "system_prompt = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques et citoyens de manière précise, concrète et concise.\"\n",
     "metrics = [\"judge_precision\", \"output_length\", \"generation_time\", \"nb_tool_calls\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"prompt_system\": prompt_system},\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"system_prompt\": system_prompt},\n",
     "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4o\",\n",
     "}\n",
@@ -75,7 +75,7 @@
     "\n",
     "# Duplicate with each model params\n",
     "# --\n",
-    "prompt_system_tool = \"Tu recherche des données précises et à jour en utilisant les outils mis à disposition sur les services publiques français. Réponds de manière précise, conrète et concise.\"\n",
+    "system_prompt_tool = \"Tu recherche des données précises et à jour en utilisant les outils mis à disposition sur les services publiques français. Réponds de manière précise, conrète et concise.\"\n",
     "tools = [\n",
     "    #{\"_tools_\": [\"search_albert_collections_v0\"]},\n",
     "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suported by albert-api atm.\n",
@@ -84,7 +84,7 @@
     "for i in range(len(grid_params[\"model\"])):\n",
     "    for extra_params in tools:\n",
     "        model = grid_params[\"model\"][i]\n",
-    "        grid_params[\"model\"].append(model.copy() | {\"extra_params\": extra_params} | {\"prompt_system\": prompt_system_tool})\n",
+    "        grid_params[\"model\"].append(model.copy() | {\"extra_params\": extra_params} | {\"system_prompt\": system_prompt_tool})\n",
     "\n",
     "# Lauching the experiment set\n",
     "expset = {\n",
