fix: columns_map for ocr marker demo dataset

--- a/notebooks/create_marker_dataset.ipynb
+++ b/notebooks/create_marker_dataset.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "34c76c88-da7e-4841-973b-585d1240a912",
    "metadata": {},
    "outputs": [],
@@ -262,15 +262,28 @@
     "The JSON should contain a list of blocks, where each block represents a distinct element in the image, such as headers, paragraphs, or tables.\n",
     "Here is a an exemple of the json schema wanted: \n",
     "\n",
+    "Schema:\n",
     "```json\n",
     "[\n",
     " {\n",
     "   \"type\": \"string (e.g  Text, Table, Code, SectionHeader, Figure, Equation, Handwriting, PageFooter, PageHeader, Picture, TableOfContents etc)\",\n",
-    "   \"content\": \"string (mardown formated text)\"\n",
+    "   \"text\": \"string (mardown formated text)\"\n",
     " },\n",
     " ...\n",
     "]\n",
     "```\n",
+    "\n",
+    "Example:\n",
+    "```json\n",
+    "[\n",
+    " {\n",
+    "    \"type\": \"Header\", \"text\": \"## I am a level 2 header\"\n",
+    " },\n",
+    " {\n",
+    "   \"type\": \"Paragraph\", \"text\": \"I am a **paragraph**\"\n",
+    " }\n",
+    "]\n",
+    "````\n",
     "\n",
     "Follow these guidelines when creating the JSON:\n",
     "\n",
@@ -343,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "ecf0b3cc-30fc-46d1-af72-f3af968169db",
    "metadata": {},
    "outputs": [],
@@ -386,48 +399,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 71,
    "id": "3d924c49-3c7c-4574-812e-dd8fb1d2146a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'type': 'Header', 'level': 1, 'text': 'Rajpreet Chahal et al.'},\n",
-       " {'type': 'Paragraph',\n",
-       "  'text': 'J Child Psychol Psychiatr 2020; 61(11): 1224–33'},\n",
+       "[{'type': 'Header', 'text': '# Rajpreet Chahal et al.'},\n",
+       " {'type': 'Header',\n",
+       "  'text': '## J Child Psychol Psychiatr 2020; 61(11): 1224–33'},\n",
        " {'type': 'Paragraph',\n",
        "  'text': 'substudy of precursors of depression, where half the participants displayed elevated depressive symptoms and half did not. Written assent/consent was obtained for all participants and their parents, and monetary compensation was provided. Study procedures were approved by the Human Protections Committee and Institutional Review Board of the study sites.'},\n",
-       " {'type': 'Header', 'level': 2, 'text': 'Measures'},\n",
-       " {'type': 'Header', 'level': 3, 'text': 'Depressive symptom severity'},\n",
+       " {'type': 'Header', 'text': '## Measures'},\n",
+       " {'type': 'Header', 'text': '### Depressive symptom severity'},\n",
        " {'type': 'Paragraph',\n",
-       "  'text': 'Self-reported depressive symptoms were collected using the Child, Adolescent, and Adult Symptom Inventories - 4th Edition beginning when the girls were age 10 and continuing annually through age 19 (Gadow, 2015). All 9 symptoms of DSM-IV major depressive disorder were assessed with these inventories, which demonstrate high validity, reliability, and clinical utility (Saavedra et al., 2017). Symptom severity, a dimensional measure, provides a significant advantage in identifying youth with mild to moderate symptoms (Gadow et al., 2015). Items were rated as follows: 0 (never), 1 (sometimes), 2 (often), or 3 (very often) and summed; yes or no items (e.g., changes in appetite) were recoded (yes = 2.5, no = 0.5) following the scoring criteria. Reliability at ages 10–19 ranged from α = .72–.86. Research shows that youth self-report of depression, compared with parent-report or multi-informant report, best predicts concurrent depressive episodes as assessed by a clinical diagnostic interview (Cohen, So, Young, Hankin, & Lee, 2019). See Appendix S2 for information about estimated major depressive disorder occurrence.'},\n",
-       " {'type': 'Header',\n",
-       "  'level': 3,\n",
-       "  'text': 'White matter diffusion-weighted imaging'},\n",
+       "  'text': 'Self-reported depressive symptoms were collected using the Child, Adolescent, and Adult Symptom Inventories – 4th Edition beginning when the girls were age 10 and continuing annually through age 19 (Gadow, 2015). All 9 symptoms of DSM-IV major depressive disorder were assessed with these inventories, which demonstrate high validity, reliability, and clinical utility (Saavedra et al., 2017). Symptom severity, a dimensional measure, provides a significant advantage in identifying youth with mild to moderate symptoms (e.g., subthreshold), 1 (never), 2 (sometimes), 3 (often), or 4 (very often) and summed; yes or no items (e.g., changes in appetite) were recoded (yes = 2.5, no = 0.5) following the scoring criteria. Reliability at ages 10–19 ranged from α = .72–.86. Research shows that youth self-report, compared with parent-report or multi-informant report, best predicts concurrent depressive episodes as assessed by a clinical diagnostic interview (Cohen, So, Young, Hankin, & Lee, 2019). See Appendix S2 for information about estimated major depressive disorder occurrence.'},\n",
+       " {'type': 'Header', 'text': '### White matter diffusion-weighted imaging'},\n",
        " {'type': 'Paragraph',\n",
-       "  'text': 'At approximately age 19, girls underwent diffusion-weighted imaging on a 3.0T Siemens Tim Trio scanner (Siemens Medical Solutions, Erlangen, Germany). A pulsed-gradient spin-echo sequence was applied in 68 directions, with b = 1,000 s/mm², and 70 axial slices. The following parameters were used: repetition time (TR) = 8,500 ms, echo time (TE) = 91 ms, and field of view (FOV) = 256 mm². Sixty-four contiguous slices were acquired with an isotropic voxel size of 2.0 mm³ and a b-value of 1,000 s/mm² (see Appendix S3 for preprocessing steps). A high-resolution T1-weighted anatomical image was acquired with the following parameters: TR = 2,300 ms; TE = 2.98 ms; flip angle = 9°; 160 slices; FOV = 256 mm; acquisition voxel size = 1.0 × 1.0 × 1.2 mm.'},\n",
-       " {'type': 'Header', 'level': 3, 'text': 'Tractography and graph construction'},\n",
+       "  'text': 'At approximately age 19, girls underwent diffusion-weighted imaging on a 3.0T Siemens Tim Trio scanner (Siemens Medical Solutions, Erlangen, Germany). A pulsed-gradient spin-echo sequence was applied in 68 directions, with b = 1,000 s/mm², and 10 non-diffusion-weighted images (b = 0 s/mm²). Sixty contiguous slices were acquired with an isotropic voxel size of 2.0 mm³ and a b-value of 1,000 s/mm² (see Appendix S3 for preprocessing steps). A high-resolution T1-weighted anatomical image was acquired with the following parameters: TR = 2,300 ms; TE = 2.98 ms; flip angle = 9°; 160 slices; FOV = 256 mm; acquisition voxel size = 1.0 × 1.0 × 1.2 mm³.'},\n",
+       " {'type': 'Header', 'text': '### Tractography and graph construction'},\n",
        " {'type': 'Paragraph',\n",
-       "  'text': 'Anatomical images were coregistered to diffusion native space and parcellated into 94 contiguous regions of interest based on the automatic anatomical labeling atlas 2 (AAL2; Rolls, Joliot, & Tzourio-Mazoyer, 2015), currently the most widely used atlas in connectivity studies (Hallquist & Hillary, 2018). Whole-brain probabilistic tractography was run using FSL’s BEDPOSTX and PROBTRACKX (Behrens, Berg, Jbabdi, Rushworth, & Woolfrich, 2007); 5,000 streamlines/voxel were sampled for each of the 94 regions. The maximum connective values between pairs of regions were taken to compute per-person connectivity matrices representing the probabilities of connections among regions (i.e., 94 × 94 undirected and weighted matrices; additional detail in Appendix S3).'},\n",
-       " {'type': 'Header', 'level': 2, 'text': 'Data analysis'},\n",
-       " {'type': 'Header', 'level': 3, 'text': 'Depressive symptom severity course'},\n",
+       "  'text': 'Anatomical images were coregistered to diffusion native space and parcellated into 94 contiguous regions of interest based on the automatic anatomical labeling atlas 2 (MAL2; Rolls, Joliot, & Tzourio-Mazoyer, 2015), currently the most widely used atlas in connectivity studies (Hagler & Hillary, 2018). Whole-brain probabilistic tractography was run using FSL’s BEDPOSTX and PROBTRACKX (Behrens, Berg, Jbabdi, Rushworth, & Woolrich, 2007); 5,000 streamlines/voxel were sampled for each of the 94 regions. The maximum connective values between pairs of regions were taken to compute per-person connectivity matrices representing the probabilities of connections among regions (i.e., 94 × 94 undirected and weighted matrices; additional detail in Appendix S3).'},\n",
+       " {'type': 'Header', 'text': '## Data analysis'},\n",
+       " {'type': 'Header', 'text': '### Depressive symptom severity course'},\n",
        " {'type': 'Paragraph',\n",
        "  'text': 'Unconditional multilevel growth modeling (Hedeker & Gibbons, 2012) in R Statistical Software version 3.4.0 (R Core Team, 2017) was used to measure within- and between-individual change in depressive severity across the ten time-points (e.g., annual assessments from ages 10 to 19). The Level 1 model estimated the girls’ average depressive symptom trajectory. Linear and quadratic models were fit to the data. The intercept of time was coded as beginning at age 10, and each time-point was coded as integers from 0 to 9 (age 10–19). The linear and quadratic models’ fit criteria were compared for model selection. Per-person estimates of intercept and slope, derived from multilevel modeling, were extracted for connectivity analyses.'},\n",
-       " {'type': 'Header', 'level': 3, 'text': 'Structural connectivity analysis'},\n",
+       " {'type': 'Header', 'text': '### Structural connectivity analysis'},\n",
        " {'type': 'Paragraph',\n",
-       "  'text': 'Network-based statistic (NBS) analyses (Zalesky, Fornito, & Bullmore, 2010), a robust method to control false-wise error rate during mass univariate testing, were used to test associations between interregional connectivity matrices and depression course variables. NBS analyses identified clusters (i.e., subnetworks) of brain regions where the strength of edges between them was associated with depression course variables. A primary component-forming threshold (p < .001, uncorrected) was applied to form suprathreshold edges of these subnetworks. Size of remaining connected components was computed and its statistical significance evaluated against an empirical null distribution of maximal component size obtained under the null hypothesis of random group membership (1,000 permutations). Subnetworks significant at a corrected level of p < .01 were reported (see Appendix S4 for additional details on NBS and Appendix S5 for a list of included brain regions and abbreviations). Resulting p-values were adjusted for multiple comparisons using Bonferroni correction (α = .05). Depressive severity intercept, linear slope, and their interaction were included as predictor variables in one regression model. Given the following variables have been associated with depression and brain connectivity, we included covariates of head motion during the scan (mean frame-wise displacement) (Yendiki, Koldewyn, & Kanwisher, 2014), full-scale IQ (fsIQ) (Nguyen et al., 2014), and socioeconomic status (SES; number of years receiving public assistance from ages 10 to 19) (Ursache & Noble, 2016). Given that anxiety may co-occur with depression (e.g., Yaroslavsky et al., 2013), the main effect of anxiety symptoms at age 10 was tested in the presence of depressive symptom intercept; however, given the focus of this study on depression and that different neural systems may be implicated in depression, anxiety, and comorbid depression-anxiety, main analyses focused on depressive symptom course.'},\n",
-       " {'type': 'Header', 'level': 2, 'text': 'Results'},\n",
+       "  'text': 'Network-based statistic (NBS) analyses (Zalesky, Fornito, & Bullmore, 2010), a robust method to control false-wise error rate during mass univariate testing, were used to test associations between interregional connectivity matrices and depression course variables. NBS analyses identified clusters (i.e., subnetworks) of brain regions where the strength of edges between them was associated with depression course variables. A primary component-forming threshold (p < .001, uncorrected) was applied to form suprathreshold edges of these subnetworks. Size of remaining connected components was computed and its statistical significance evaluated against an empirical null distribution of maximal component size obtained under the null hypothesis of random group membership (1,000 permutations). Subnetworks significant at a corrected level of p < .01 were reported (see Appendix S4 for additional details on NBS and Appendix S5 for a list of included brain regions and abbreviations). Resulting p-values were adjusted for multiple comparisons using Bonferroni correction (α = .05). Depressive severity intercept, linear slope, and their interaction were included as predictor variables in one regression model. Given the following variables have been associated with depression and brain connectivity, we included covariates of head motion during the scan (mean frame-wise displacement) (Yendiki, Koldewyn, & Kanwisher, 2014), verbal IQ (IQ) (Nugent et al., 2013), and socioeconomic status (SES; number of years receiving public assistance from ages 10 to 19) (Ursache & Noble, 2016). Given that anxiety may co-occur with depression (e.g., Yaroslavsky et al., 2013), the main effect of anxiety symptoms at age 10 was tested in the presence of depressive symptom intercept; however, given the focus of this study on depression and that different neural systems may be implicated in depression, anxiety, and comorbid depression-anxiety, main analyses focused on depressive symptom course.'},\n",
+       " {'type': 'Header', 'text': '## Results'},\n",
        " {'type': 'Paragraph',\n",
        "  'text': 'Table 1 presents means, standard deviations, and correlations among depression measures, race, verbal IQ, head motion, and SES. The distributions of depressive severity scores at all time-points are presented in Figure S1.'},\n",
-       " {'type': 'Header', 'level': 3, 'text': 'Depressive symptom severity course'},\n",
+       " {'type': 'Header', 'text': '### Depressive symptom severity course'},\n",
        " {'type': 'Paragraph',\n",
        "  'text': 'The quadratic model fit the longitudinal data slightly better than the linear model; however, there were no differences in model fit between quadratic models with or without freely estimated quadratic terms (Table S1). Based on these results, we selected the quadratic model without the freely estimated quadratic term to parsimoniously conduct structural connectivity analyses. At time 0 (age 10), average depressive severity score was 7.27, t(114) = 18.72, p < .0001. With each one year increase in age, participants decreased an average of 0.51 unit in'},\n",
        " {'type': 'Paragraph',\n",
        "  'text': '© 2019 Association for Child and Adolescent Mental Health'}]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "id": "96570f92-3a66-4639-919b-0aee6f4a45e1",
    "metadata": {},
    "outputs": [
@@ -734,15 +745,16 @@
        "{'name': 'OCR_marker_benchmark',\n",
        " 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker',\n",
        " 'default_metric': 'ocr_v1',\n",
-       " 'id': 15,\n",
-       " 'created_at': '2025-05-02T14:08:18.952579',\n",
+       " 'columns_map': None,\n",
+       " 'id': 16,\n",
+       " 'created_at': '2025-05-04T20:54:28.724067',\n",
        " 'size': 0,\n",
        " 'columns': [],\n",
        " 'parquet_size': 0,\n",
        " 'parquet_columns': []}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,14 +772,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "id": "7af51e32-5260-415e-a2fb-54ee2c87388f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebd9015d9e4043d5b8dd272aff3902ec",
+       "model_id": "40717171f9bd46c5a83c319cd0fc6c86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -783,7 +795,7 @@
      "output_type": "stream",
      "text": [
       "Upload successful!\n",
-      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'id': 15, 'created_at': '2025-05-02T14:08:18.952579', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['bytes', 'path', 'element', 'classification', 'language', 'pdf', 'uuid', 'element', 'element', 'text', 'type', 'markdown_true']}\n"
+      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'columns_map': None, 'id': 16, 'created_at': '2025-05-04T20:54:28.724067', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']}\n"
      ]
     }
    ],
@@ -818,8 +830,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "434430e8-e558-4217-8095-175d4878c35f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'columns_map': {'output_true': 'markdown_true'}, 'id': 16, 'created_at': '2025-05-04T20:54:28.724067', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Patch the dataset to add a dolumn map to indicate where is **output_true**\n",
+    "# --\n",
+    "\n",
+    "# Define the data to be patched\n",
+    "data = {\n",
+    "    \"columns_map\": {\n",
+    "        \"output_true\": \"markdown_true\",\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Make the PATCH request\n",
+    "response = requests.patch(f'{EG1_API_URL}/dataset/{dataset[\"id\"]}', headers=eg1_headers, data=json.dumps(data))\n",
+    "\n",
+    "# Print the response\n",
+    "print(response.status_code)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "472601a3-eab6-4660-9c6f-398fdcc831c2",
    "metadata": {},
    "outputs": [],
    "source": []
